--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^2.0.3",
     "jsdom": "^24.1.0",
     "sass": "^1.77.7",
     "vitest": "^2.0.1"
