--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18"
