--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.3.1",
