--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest"
@@ -12,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "next": "^14.2.5",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
